feat: update lifecycle

--- a/3_intermediate/samples/6.lifecycle.yml
+++ b/3_intermediate/samples/6.lifecycle.yml
@@ -13,7 +13,7 @@ spec:
         app: lifecycle
     spec:
       initContainers:
-        - name: init
+        - name: init-container
           image: busybox
           command: ["sh", "-c", "sleep 10"]
 
