feat: update learning

--- a/3_intermediate/samples/3.service.yml
+++ b/3_intermediate/samples/3.service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: helloworld-service
 spec:
+  type: NodePort
   selector:
     app: helloworld
   ports:
@@ -10,4 +11,26 @@ spec:
       nodePort: 31001
       targetPort: nodejs-port
       protocol: TCP
-  type: NodePort
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: helloworld-deployment
+spec:
+  replicas: 3
+  revisionHistoryLimit: 10 # number of rollout history
+  selector:
+    matchLabels:
+      app: helloworld
+  template:
+    metadata:
+      labels:
+        app: helloworld
+    spec:
+      containers:
+        - name: helloworld-container
+          image: wardviaene/k8s-demo
+          ports:
+            - name: nodejs-port
+              containerPort: 3000
