--- a/3_intermediate/samples/2.deployment.yml
+++ b/3_intermediate/samples/2.deployment.yml
@@ -19,3 +19,10 @@ spec:
           ports:
             - name: nodejs-port
               containerPort: 3000
+          resources:
+            limits:
+              memory: 200Mi
+              cpu: 200m
+            requests:
+              memory: 160Mi
+              cpu: 60m
