feat: add nginx sample

--- a/4_advanced/samples/2.config-map-env.yml
+++ b/4_advanced/samples/2.config-map-env.yml
@@ -19,3 +19,10 @@ spec:
         requests:
           memory: 160Mi
           cpu: 60m
+
+      env:
+        - name: DRIVER
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: driver
