fix: fix cm data

--- a/4_advanced/samples/3.cm.yml
+++ b/4_advanced/samples/3.cm.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: nginx-config
 data:
-  reverseproxy.conf: |
+  reverseproxy.conf: |-
     server {
         listen       80;
         server_name  localhost;
